支持新根因分析

--- a/ql/pom.xml
+++ b/ql/pom.xml
@@ -493,6 +493,11 @@
       <artifactId>jersey-servlet</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>3.2.0</version>
+    </dependency>
   </dependencies>
 
   <profiles>
