--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -84,7 +84,7 @@
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>${commons-io.version}</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
     <dependency>
       <groupId>jline</groupId>
